--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,12 @@ navigation link color: #FFFFFF
 calendar background and treatments: #0B1942
 calendar highlighted day: #F5005B
 button background: #F5005B
-copyright text: #FFFFFF*/
+copyright text: #FFFFFF
+breakpoint range	breakpoint range start	breakpoint range end
+small	0 (320px)	544px
+medium	545px	768px
+large	769px	+ and up
+*/
 
 *, *:before, *:after {
   box-sizing: border-box;
@@ -29,10 +34,21 @@ copyright text: #FFFFFF*/
   background: transparent;
 }
 
-
-
-
-
-
-
 @import url("https://fonts.google.com/specimen/PT+Sans");
+
+body {
+  font-family: 'PT Sans';
+  color: #0B1942;
+}
+
+@media (min-width:769px) {
+
+}
+
+@media (min-width:769px) {
+
+}
+
+@media (min-width:769px) {
+
+}
