--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,8 @@ breakpoint range	breakpoint range start	breakpoint range end
 small	0 (320px)	544px
 medium	545px	768px
 large	769px	+ and up
+vw and vh. The vw is 1/100th of the window's width and the vh is 1/100th
+of the window's height. For responsiveness they are going to be the new units.
 */
 
 *, *:before, *:after {
@@ -45,10 +47,10 @@ body {
 
 }
 
-@media (min-width:769px) {
+@media only screen and (min-width:545px) and (max-width:768px) {
 
 }
 
-@media (min-width:769px) {
+@media (max-width:544px) {
 
 }
