--- a/css/main.css
+++ b/css/main.css
@@ -101,6 +101,25 @@ body {
     text-decoration: none;
   }
 
+  .middle_page {
+    background-color: #0B1942;
+    display: flex;
+    flex-direction: row;
+  }
+
+  .upnext {
+    font-size: 20px;
+  }
+
+  .rashomon {
+    background-color: ##E2E2E2;
+  }
+
+  .rashoman ul {
+    display: flex;
+    flex-direction: column;
+  }
+
   #site_footer {
     display: flex;
     align-items: center;
