--- a/css/main.css
+++ b/css/main.css
@@ -91,7 +91,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    height: 15vh;
+    margin-bottom: 3rem;
   }
 
   .sectiontitle {
@@ -99,20 +99,35 @@ body {
     background-color: #0B1942;
     color: #fff;
     text-decoration: none;
+    display: block;
+    margin-right: 2rem;
   }
 
   .middle_page {
     background-color: #0B1942;
+    min-height: 100%
     display: flex;
-    flex-direction: row;
+    flex-flow: row wrap;
   }
 
   .upnext {
     font-size: 20px;
+    display: block;
+    color: #fff;
   }
 
   .rashomon {
-    background-color: ##E2E2E2;
+    /*background-color: ##E2E2E2;
+    color: #fff;
+    display: flex;
+    flex-direction: row;
+    /*flex-wrap: nowrap;
+    justify-content: flex-start;*/
+
+  }
+
+  .four_films {
+
   }
 
   .rashoman ul {
